force-app/main/default/objects/AgentStep__e/AgentStep__e.object-meta.xml
<CustomObject>
    <label>Agent Step</label>
    <pluralLabel>Agent Steps</pluralLabel>
</CustomObject>