force-app/main/default/objects/AgentStep__e/fields/Thought__c.field-meta.xml
<CustomField>
    <fullName>Thought__c</fullName>
    <label>Thought</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>