force-app/main/default/objects/AgentStep__e/fields/ToolName__c.field-meta.xml
<CustomField>
    <fullName>ToolName__c</fullName>
    <label>Tool Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>