force-app/main/default/objects/AgentStep__e/fields/ToolResult__c.field-meta.xml
<CustomField>
    <fullName>ToolResult__c</fullName>
    <label>Tool Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>