force-app/main/default/objects/AgentStep__e/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <label>Utterance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>